--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<script src="public/js/lib/bitstring.js"></script>
 	<script src="public/js/lib/mediacapture.js"></script>
 
-	<!-- Development
+	<!-- Development -->
 	<script src="src/ogg.js"></script>
 	<script src="src/libspeexdsp.js"></script>
 	<script src="src/libspeex.js"></script>
@@ -103,10 +103,10 @@
 	<script src="src/codec.js"></script>
 	<script src="src/decoder.js"></script>
 	<script src="src/encoder.js"></script>
-  -->
+
 
 	<!-- Production -->
-	<script src="dist/speex.min.js"></script>
+	<!-- <script src="dist/speex.min.js"></script> -->
 
 	<!-- For input/microphone handling and codec API usage -->
 	<script src="public/js/microphone.js"></script>
